oxiplate-derive/tests/broken/comment-unclosed.stderr
error: Expected comment text followed by `#}`
 --> tests/broken/comment-unclosed.rs:4:23
  |
4 | #[oxiplate_inline(r#"{#"#)]
  |                       ^
